--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,6 +7,8 @@
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
+
+  <view class='calculator' hover-class='hoverClass' bindtap='navigateToCalculator'>计算器</view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
