--- a/pages/calculator/calculator.wxss
+++ b/pages/calculator/calculator.wxss
@@ -1,1 +1,34 @@
 /* pages/calculator/calculator.wxss */
+page {
+  background-color: #000000;
+}
+.screen view {
+  color: #ffffff;
+  font-size: 60rpx;
+  text-align: right;
+  padding-right: 30rpx;
+}
+
+.btnGroup {
+  display: flex;
+  flex-direction: row;
+}
+.buttonItem {
+  width: 187.5rpx;
+  line-height: 150rpx;
+}
+.buttonItemIcon {
+  width: 187.5rpx;
+  /* line-height: 150rpx; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.zero {
+  width: 375rpx;
+}
+.keyBoard {
+  position: fixed;
+  bottom: 0;
+}
